--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -34,10 +34,7 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>2014 U.S. State Data Demonstrates Relationship Between Health Markers and Poverty Levels</h2>
-          <p>To visualize different data views, please select from the various headings of Poverty, Age, Household Income, 
-            Obesity, Smokers, and Without Healthcare. Each selection shifts the State data represented in circles on  
-            the graph. The small circles can then be selected or hovered over to view the specific values for that state.  </p>
+          <h2>This is the 2014 US Census Bureau report showing Relationship Between Health and particular demographics.</h2>
 
  </p>
 
